--- a/src/styles/1style.css
+++ b/src/styles/1style.css
@@ -35,16 +35,6 @@ p#currentDay {
   
   background-color:darkblue;
 }
-#clearbtn {
-  color:rgb(0, 25, 250);
-  background-color:rgb(255, 255, 255);
-  width:10%;
-  margin-left:45%;
-  display:inline-table;
-  }
-  #clearbtn:hover{
-    background-color:grey;
-  }
 /*making time for block easier to see*/
 #timeP {
   display:block;
@@ -64,4 +54,22 @@ p#currentDay {
 .future {
   background-color:teal;
 
+}
+/* On screens that are 992px or less, 
+hide header title, make buttons wider so they dont look weird, show time font smaller
+so it does not look weird, */
+@media screen and (max-width: 992px) {
+
+ 
+  #timeP {
+    display:inline-block;
+    color:black;
+    font-size:small;
+  }
+  #savebtn {
+    width:25%;
+  }
+  #organize {
+    display:none !important
+  }
 }
